# mcp-apple-notes

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/agent-memory/komodo-infra/: MEMORY.md  reference_km_cli.md  reference_stack_naming.md
.github/: dependabot.yml
.github/workflows/: release.yml
src/mcp_apple_notes/: __init__.py  __main__.py  applescript_bridge.py  config.py  notestore.py  server.py
tests/: test_delete_elicit.py  test_note_url.py  test_server_contract.py  test_threading.py
