[project]
name = "mcp-apple-notes"
version = "0.3.16"
description = "MCP server for Apple Notes — read, search, and create notes"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
authors = [
    { name = "Casey Romkes" },
]
keywords = [
    "mcp",
    "anthropic",
    "claude",
    "apple-notes",
    "notes",
    "fastmcp",
    "macos",
    "apple",
    "applescript",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: MacOS",
]
dependencies = [
    "fastmcp>=3.4.3,<4.0.0",
    "pydantic-settings>=2.14.2",  # GHSA-4xgf-cpjx-pc3j
    "markdownify>=0.14.1",
    # Security floors (transitive deps of fastmcp; pinned to address CVEs)
    "authlib>=1.7.0",            # GHSA: CSRF in token cache handling
    "python-multipart>=0.0.31",  # CVE-2026-53538/53539/53540: DoS via unbounded multipart headers
]

[project.urls]
"Homepage" = "https://github.com/CaseyRo/mcp-apple-notes"
"Bug Tracker" = "https://github.com/CaseyRo/mcp-apple-notes/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_apple_notes"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mcp_apple_notes",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[project.scripts]
mcp-apple-notes = "mcp_apple_notes.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "build>=0.10.0",
]
